build(deps): 添加三端多平台依赖